--- a/webdesign/css/mw_styles.css
+++ b/webdesign/css/mw_styles.css
@@ -41,7 +41,7 @@ nav ul li{
 
 nav ul li:hover{
 	background-color: rgb(132,121,36);
-	list-style-image: url(image/wheelmarker.png);
+	list-style-image: url(/webdesign/image/wheelmarker.png);
 }
 nav ul li a:hover{
 	color: yellow;
