--- a/webdesign/css/mw_styles.css
+++ b/webdesign/css/mw_styles.css
@@ -35,17 +35,19 @@ nav ul li a{
 	text-decoration: none;
 }
 
-nav ul li{
-   list-style-type: none;
+nav ul{
+   list-style-image: url("https://raw.githubusercontent.com/billyxdude12/billyxdude12.github.io/master/webdesign/image/wheelmarker.png");
 }
 
 nav ul li:hover{
 	background-color: rgb(132,121,36);
-	list-style-image: url(/webdesign/image/wheelmarker.png);
+   
+
 }
 nav ul li a:hover{
 	color: yellow;
 	color: rgba(255,255,255,1);
+
 }
 #leftsection p {
   font-size: 22px;
