--- a/webdesign/css/calendar.css
+++ b/webdesign/css/calendar.css
@@ -14,4 +14,28 @@
 
 */
 
+table{
 
+   border-spacing: 5px;
+   font-size: 8px;
+   margin-top: 20px;
+   margin-bottom: 5px;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 40px;
+   width: 650px;
+
+}
+
+th{
+    border: 1px solid black;
+}
+
+table.calendar caption{
+   text-align: center;
+   padding-bottom: 10px;
+   font-size: 16px;
+   letter-spacing: 3px;
+   width: 650px;
+
+}
